jakies stare zmiany

--- a/client_app/Pipfile
+++ b/client_app/Pipfile
@@ -9,6 +9,9 @@ verify_ssl = true
 eel = "*"
 zeep = "*"
 pillow = "*"
+async-eel = "*"
+await = "*"
+expiringdict = "*"
 
 [requires]
 python_version = "3.6"
